Bug fix: cannot reorder persistent collections.